@@ -1,5 +1,2 @@
 name = Pod-Weaver-Section-Support
-
-; do everything automatically
 [@Apocalyptic]
-pauseid = APOCAL
