@@ -2,11 +2,58 @@ package Pod::Weaver::Section::Support;
 
 # ABSTRACT: add a SUPPORT pod section
 
-use Moose 1.01;
+use Moose 1.03;
 use Moose::Autobox 0.10;
 
-use Pod::Weaver::Role::Section 3.100710;
-with 'Pod::Weaver::Role::Section';
+with 'Pod::Weaver::Role::Section' => { -version => '3.100710' };
+
+=attr repository_link
+
+Specify which url to use when composing the external link.
+The value corresponds to the repository meta resources (for dzil v3 with CPAN Meta v2).
+
+Valid options are: "url", "web", "both", or "none".
+
+"both" will include links to both the "url" and "web" in separate POD paragraphs.
+
+"none" will skip the repository item entirely.
+
+The default is "both".
+
+An error will be thrown if a specified link is not found
+because if you said that you wanted it you probably expect it to be there.
+
+=cut
+
+{
+	use Moose::Util::TypeConstraints 1.01;
+
+	has repository_link => (
+		is => 'ro',
+		isa => enum( [ qw( both none url web ) ] ),
+		default => 'both',
+	);
+
+	no Moose::Util::TypeConstraints;
+}
+
+=attr repository_content
+
+Text displayed before the link to the source code repository.
+
+The default is a sufficient explanation (see L</SUPPORT>).
+
+=cut
+
+has repository_content => (
+	is => 'ro',
+	isa => 'Str',
+	default => <<EOPOD
+The code is open to the world, and available for you to hack on. Please feel free to browse it and play
+with it, or whatever. If you want to contribute patches, please send me a diff or prod me to pull
+from your repository :)
+EOPOD
+);
 
 sub weave_section {
 	## no critic ( ProhibitAccessOfPrivateData )
@@ -23,10 +70,6 @@ sub weave_section {
 	my $lc_dist = lc( $dist );
 	my $perl_name = $dist;
 	$perl_name =~ s/-/::/g;
-	my $repository;
-	if ( exists $zilla->distmeta->{resources}{repository} ) {
-		$repository = $zilla->distmeta->{resources}{repository};
-	}
 
 	$document->children->push(
 		# Add the stopwords so the spell checker won't complain!
@@ -89,43 +132,65 @@ EOPOD
 						} ),
 					],
 				} ),
-				_add_repo( $repository ),
+				$self->_add_repo( $zilla ),
 			],
 		} ),
 	);
 }
 
 sub _add_repo {
-	my( $repo ) = @_;
+	my( $self, $zilla ) = @_;
 
-	return () if ! defined $repo;
+	return () if $self->repository_link eq 'none';
 
-	my $text = <<'EOPOD';
-The code is open to the world, and available for you to hack on. Please feel free to browse it and play
-with it, or whatever. If you want to contribute patches, please send me a diff or prod me to pull
-from your repository :)
+	my $repo;
+	if ( exists $zilla->distmeta->{resources}{repository} ) {
+		$repo = $zilla->distmeta->{resources}{repository};
+	} else {
+		$zilla->log_fatal( [ "Repository information missing and you wanted: %s", $self->repository_link ] );
+	}
 
-EOPOD
+	my $text = $self->repository_content . "\n";
 
 	# for dzil v3 with CPAN Meta v2
 	if ( ref $repo ) {
-		# add the web url
-		if ( exists $repo->{web} ) {
-			$text .= 'L<' . $repo->{web} . ">\n\n";
+		# add the web url?
+		if ( $self->repository_link eq 'web' or $self->repository_link eq 'both' ) {
+			if ( exists $repo->{web} ) {
+				$text .= 'L<' . $repo->{web} . ">\n\n";
+			} else {
+				$zilla->log_fatal("Expected to find 'web' repository link but it is missing in the metadata!");
+			}
 		}
 
-		# do we have a type?
-		if ( exists $repo->{type} ) {
-			if ( $repo->{type} eq 'git' ) {
-				$text .= '  git clone ' . $repo->{url};
-			} else {
-				# TODO add support for other formats? I'm lazy now hah
-				$text .= '  ' . $repo->{url};
+		if ( $self->repository_link eq 'url' or $self->repository_link eq 'both' ) {
+			if ( ! exists $repo->{url} ) {
+				$zilla->log_fatal("Expected to find 'url' repository link but it is missing in the metadata!");
 			}
-		} else {
-			$text .= '  ' . $repo->{url};
+
+			# do we have a type?
+			$text .= '  ';
+			if ( exists $repo->{type} ) {
+				# list of repo types taken from Dist::Zilla::Plugin::Repository v0.16
+				if ( $repo->{type} eq 'git' ) {
+					$text .= 'git clone';
+				} elsif ( $repo->{type} eq 'svn' ) {
+					$text .= 'svn checkout';
+				} elsif ( $repo->{type} eq 'darcs' ) {
+					$text .= 'darcs get';
+				} elsif ( $repo->{type} eq 'hg' ) {
+					$text .= 'hg clone';
+				} else {
+					# TODO add support for other formats? cvs/bzr? they're not in DZP::Repository...
+				}
+
+				$text .= ' ' . $repo->{url};
+			} else {
+				$text .= $repo->{url};
+			}
 		}
 	} else {
+		$zilla->log_warning("You need to update Dist::Zilla::Plugin::Repository to at least v0.15 for the correct metadata!");
 		$text .= "L<$repo>";
 	}
 
@@ -173,8 +238,8 @@ This section plugin will produce a hunk of pod that lists the common support web
 and an explanation of how to report bugs. It will do this only if it is being built with L<Dist::Zilla>
 because it needs the data from the dzil object.
 
-If you have L<Dist::Zilla::Plugin::Repository> enabled in your F<dist.ini>, an extra link will be added
-for the repo.
+If you have L<Dist::Zilla::Plugin::Repository> enabled in your F<dist.ini>, be sure to check the
+repository_link attribute!
 
 This is added B<ONLY> to the main module's POD, because it would be a waste of space to add it to all
 modules in the dist.
